Fix warnings, set unmapped target policy to ignore on mappers. Fix JwtService deprecated methods.

--- a/src/main/resources/templates/train.html
+++ b/src/main/resources/templates/train.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<script src="popper.min.js"></script>
-<script src="bootstrap.bundle.min.js"></script>
+<script src="../static/popper.min.js"></script>
+<script src="../static/bootstrap.bundle.min.js"></script>
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <link crossorigin="anonymous"
@@ -118,6 +118,5 @@
 </div>
 <br>
 <br>
-</div>
 </body>
 </html>
