--- a/src/main/resources/templates/driver_success.html
+++ b/src/main/resources/templates/driver_success.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-4">
-            <a class="btn btn-secondary" role="button" th:href="@{/}">Go back to the main page</a>
+            <a class="btn btn-danger" role="button" th:href="@{/}">Go back to the main page</a>
         </div>
     </div>
 
