--- a/src/main/resources/templates/trainDetails.html
+++ b/src/main/resources/templates/trainDetails.html
@@ -22,21 +22,15 @@
     <table class="table">
         <thead class="table-dark">
         <tr>
-            <th>trainKwr</th>
-            <th>companyName</th>
-            <th>datePlan</th>
-            <th>roadStats</th>
-            <th>driver</th>
+            <th>KWR</th>
+            <th>Company</th>
+            <th>Date</th>
+            <th>Distance</th>
+            <th>Driver</th>
+            <th>Profile</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <th>trainKwr</th>
-            <th>companyName</th>
-            <th>datePlan</th>
-            <th>roadStats</th>
-            <th>driver</th>
-        </tr>
         <tr>
             <td th:text="${train != null ? train.trainKwr : ''}"></td>
             <td th:text="${train != null ? train.companyName : ''}"></td>
@@ -98,15 +92,17 @@
 
         <br>
         <br>
-        <div class="container">
-            <div class="row mt-2">
-                <div class="col-md-2 d-flex justify-content-end">
-                    <a class="btn btn-warning" role="button" th:href="@{/}">Main Page</a>
-                </div>
-            </div>
-        </div>
+
         </tbody>
     </table>
+</div>
+
+<div class="container">
+    <div class="row mt-3">
+        <div class="col-md-4">
+            <a class="btn btn-danger" role="button" th:href="@{/}">Go back to the main page</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
