--- a/src/main/resources/templates/warnings.html
+++ b/src/main/resources/templates/warnings.html
@@ -15,9 +15,14 @@
     <h1>Train Driver helper!</h1>
 </div>
 <br>
+<div class="row mt-3">
+    <div class="col-md-4">
+        <a class="btn btn-danger" role="button" th:href="@{/}">Go back to the main page</a>
+    </div>
+</div>
 <br>
 
-<h2>Train details:</h2>
+<h2>Actual WOS files by regions:</h2>
 <div>
     <table class="table">
         <thead class="table-dark">
@@ -36,14 +41,6 @@
             <td th:text="${warning.line}"></td>
         </tr>
     </table>
-</div>
-
-<div class="container">
-    <div class="row mt-2">
-        <div class="col-md-2 d-flex justify-content-end">
-            <a class="btn btn-warning" role="button" th:href="@{/}">org.pl.deenes.Main Page</a>
-        </div>
-    </div>
 </div>
 </body>
 </html>
