--- a/src/main/resources/templates/warnings.html
+++ b/src/main/resources/templates/warnings.html
@@ -27,10 +27,9 @@
     <table class="table">
         <thead class="table-dark">
         <tr>
-            <th>region</th>
+            <th>PKP PLK region ID</th>
             <th>actual WOS</th>
             <th>WOS link</th>
-            <th>line</th>
         </tr>
         </thead>
         <tbody>
@@ -38,7 +37,6 @@
             <td th:text="${warning.zlkRegionNumber}"></td>
             <td th:text="${warning.actualWOS}"></td>
             <td th:text="${warning.actualWOSlink}"></td>
-            <td th:text="${warning.line}"></td>
         </tr>
     </table>
 </div>
